src/test/ui/parser/issue-32446.stderr
error: expected one of `async`, `const`, `crate`, `default`, `extern`, `fn`, `pub`, `static`, `type`, `unsafe`, `}`, or identifier, found `...`
  --> $DIR/issue-32446.rs:4:11
   |
LL | trait T { ... }
   |           ^^^ expected one of 12 possible tokens

error: aborting due to previous error

